Update to work with java modules